Database connected, Event class added

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -9,7 +9,7 @@ application.secret="bWkZS`4ZHYe1WGH=cWglj`q0HE<olSR6>FXn=aa6rh:`aX=2Sx<Pk_k^w[SR
 
 # The application languages
 # ~~~~~
-application.langs="en"
+application.langs="ru"
 
 # Global object class
 # ~~~~~
@@ -33,10 +33,10 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
-# db.default.user=sa
-# db.default.password=""
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://sql5.freemysqlhosting.net:3306/sql543723"
+db.default.user="sql543723"
+db.default.pass="zB3!jK5!"
 
 # Evolutions
 # ~~~~~
