Database chaged. Update event func added

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,9 +34,9 @@ application.langs="ru"
 # By convention, the default datasource is named `default`
 #
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://sql5.freemysqlhosting.net:3306/sql543723"
-db.default.user="sql543723"
-db.default.pass="zB3!jK5!"
+db.default.url="jdbc:mysql://ec2-176-34-253-124.eu-west-1.compute.amazonaws.com:3306/tickets"
+db.default.user="devtrick"
+db.default.pass="xthyjvjhtw"
 
 # Evolutions
 # ~~~~~
