Now event is deleted together with all sectors and seats

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,9 +34,9 @@ application.langs="ru"
 # By convention, the default datasource is named `default`
 #
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://eu-cdbr-cb-west-01.cleardb.net:3306/cb_tickets-dev1"
-db.default.user="bfbc1001c22d83"
-db.default.pass="4d830093"
+db.default.url="jdbc:mysql://ec2-176-34-253-124.eu-west-1.compute.amazonaws.com:3306/tickets"
+db.default.user="devtrick"
+db.default.pass="xthyjvjhtw"
 
 # Evolutions
 # ~~~~~
